<resources>
    <string name="app_name">ScatTools</string>
    <string name="menu_options">Options</string>
    <string name="bottom_nav_tools">Tools</string>
    <string name="bottom_nav_list">List</string>
    <string name="bottom_nav_editable_list">Editable List</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_randomize">Randomize</string>
    <string name="lbl_tap">Tap To Roll</string>
    <string name="lbl_play">Play</string>
    <string name="hint_list_id">List ID</string>
    <string-array name="letters">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>W</item>
    </string-array>
    <string-array name="letters_full">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="settings_header_die">Die Settings</string>
    <string name="settings_header_timer">Timer Settings</string>
    <string name="settings_alphabet">Alphabet</string>
    <string name="settings_skip_previous">Skip Previous Letter</string>
    <string name="settings_timer_duration">Timer Duration</string>
    <string name="settings_expire_sound">Timer Expire Sound</string>
    <string name="settings_play_tick">Play Tick Sounds</string>


    <string-array name="settings_alphabets">
        <item>Official Alphabet</item>
        <item>Full Alphabet</item>
    </string-array>

    <string-array name="settings_duration_times">
        <item>2:00</item>
        <item>2:30</item>
        <item>3:00</item>
    </string-array>

    <string-array name="settings_expire_sounds">
        <item>Phone Ringing</item>
        <item>Rooster</item>
        <item>Train Whistle</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
