<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <PreferenceCategory android:title="@string/settings_header_die">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/settings_alphabets"
            android:entryValues="@array/settings_alphabets"
            android:key="list_preference_alphabet"
            android:summary="%s"
            android:title="@string/settings_alphabet" />

        <SwitchPreference
            android:key="switch_preference_skip_previous"
            android:title="@string/settings_skip_previous" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_header_timer">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/settings_duration_times"
            android:entryValues="@array/settings_duration_times"
            android:key="list_preference_timer_duration"
            android:summary="%s"
            android:title="@string/settings_timer_duration" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/settings_expire_sounds"
            android:entryValues="@array/settings_expire_sounds"
            android:key="list_preference_expire_sound"
            android:summary="%s"
            android:title="@string/settings_expire_sound" />

        <SwitchPreference
            android:key="switch_preference_play_tick"
            android:title="@string/settings_play_tick">
            <!--<intent android:action="android.intent.action.VIEW"
                android:data="http://codepath.com/" /> !-->
        </SwitchPreference>

    </PreferenceCategory>

</PreferenceScreen>